- SteerForWander.SmoothRate is now an amount per second. This causes it to no longer be framerate-dependent.
- Replaced IsPlanar with AllowedMovementAxes. We can now limit movement on any arbitrary axis, not only the Y.

You can read more about it here: http://arges-systems.com/blog/2014/01/30/unitysteer-acceleration-smoothing-changes/

Also:

- Removed vestigial SphericalObstacleData. See DetectableObject.
- Added namespaces to the behaviors.  Decided against adding indentation to minimize the number of lines changed in case someone's doing a diff and forgets to exclude whitespace differences.
- Removed SteeringEvent. The class was unnecessary, we can just do everything with standard actions.
- New property Steering.ShouldRetryForce, so that behaviors handling the OnArrival even can indicate to the steering if they should retry the force calculation before giving up (in case any parameters changed).  The previous implementation was somewhat hacky.
- SteerForTether is now a post-processing behavior. It now will also average between the impulse pulling it back and the desired velocity - I like that behavior better.
- SteerForEvasion is now a post-processing behavior.  This helps overlay it with other behaviors in a more natural fashion, since we can steer the vehicle while still keeping away from a target.
- SteerForPursuit has a new parameter to indicate if it should consider the vehicle's velocity on approach. It's false by default.
- Vehicle.Speed no longer has a setter to avoid confusion. In most cases chances are users want to adjust the maximum speed, and the only vehicle which currently lets you set the speed is AutonomousVehicle, where it would be promptly overwritten by the velocity calculations.
- The setter for Vehicle.Velocity is now protected. See the case for Vehicle.Speed.
- Updated TickedPriorityQueue.dll with bugfixes and new features.
- Sealing SteerForNeighbors.CalculateForce to make it absolutely clear subclasses should not override it.