@@ -10,6 +10,7 @@ BREAKING CHANGES FROM UNITYSTEER 2.x:
 - Using the AutonomousVehicle's DesiredSpeed to indicate the speed we're aiming for, and Speed the one we're actually moving at.  Speed will gradually aim for DesiredSpeed at its acceleration/deceleration rates.
 - SteerForWander.SmoothRate is now an amount per second. This causes it to no longer be framerate-dependent.
 - Replaced IsPlanar with AllowedMovementAxes. We can now limit movement on any arbitrary axis, not only the Y.
+- Removed obsolete SteerForSphericalObstacleAvoidance.  SteerForSphericalObstacleRepulsion is now simply called SteerForSphericalObstacles.
 
 You can read more about it here: http://arges-systems.com/blog/2014/01/30/unitysteer-acceleration-smoothing-changes/
 
